# pptx-template-transfer

./: .gitignore  README.md  pyproject.toml  requirements.txt  test_pptx_template_transfer.py  test_regression.py
pptx_template_transfer/: __init__.py  __main__.py  cli.py  helpers.py  models.py
pptx_template_transfer/analysis/: __init__.py  layout_patterns.py  slide_classifier.py  theme_extractor.py
pptx_template_transfer/extraction/: __init__.py  content_extractor.py  semantic_blocks.py
pptx_template_transfer/transform/: __init__.py  clone_injector.py  layout_mapper.py  overflow_resolver.py  slide_builder.py
pptx_template_transfer/validation/: __init__.py  bounds_checker.py  contamination_checker.py  overlap_checker.py  quality_report.py  source_coverage.py
