[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pptx-template-transfer"
version = "0.1.0"
description = "Apply one PowerPoint deck's visual design to another's content"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = [
    "python-pptx>=1.0",
    "lxml>=4.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
]

[project.scripts]
pptx-transfer = "pptx_template_transfer.cli:main"

[tool.setuptools.packages.find]
include = ["pptx_template_transfer*"]

[tool.pytest.ini_options]
testpaths = ["."]
python_files = ["test_*.py"]
